# data_collect

./: pyproject.toml
JovemNerd/: episodios.py
ResidentEvil/: collect.py  data_re.parquet
TabNews/: basic_content.py
